--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BGHub</string>
+
+    <string name="facebook_app_id">206883160548297</string>
+    <string name="fb_login_protocol_scheme">fb206883160548297</string>
 </resources>
