SerchForPlayers partial dev, now starting to implement row click listener

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
 
     <string name="thumbnail">Thumbnail</string>
     <string name="menu_favorite">Favorite</string>
+
+    <string name="label_search_game_name">Game name</string>
+    <string name="label_search_game_mechanic">Game mechanics</string>
+    <string name="label_search_number_players">Number of players</string>
 </resources>
